--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 FLASK_APP=app
 FLASK_RUN=development
-DATABASE_URI=postgresql://uvobgyny:zXat1Ef4XKRX29uJpknVs-G7USNMbJD7@castor.db.elephantsql.com/uvobgyny
+DATABASE_URI=postgresql://zjwkxxus:NL1kdP0pkqwo2RTjlHJ9mX-q2iuyeJ9j@jelani.db.elephantsql.com/zjwkxxus
